--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,11 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "type": "module"
 }
