--- a/client/.prettierignore
+++ b/client/.prettierignore
@@ -1,5 +1,5 @@
-# https://prettier.io/docs/en/ignore.html
-
-/build
-/coverage
+# https://prettier.io/docs/en/install.html
 /public
+.prettierrc.json
+package-lock.json
+package.json
