--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,8 +20,6 @@ jobs:
         run: cd client && npm install
       - name: lint and format
         run: cd client && npm run lint && npm run format
-      - name: build
-        run: cd client && npm run build
   server_setup:
     needs: client_build
     runs-on: ubuntu-latest
@@ -32,8 +30,8 @@ jobs:
           node-version: '19'
       - name: install dependencies
         run: cd server && npm install
-      - name: copy build
-        run: cd client && cp -r build ../server
+      - name: build frontend
+        run: cd client && && npm run build && cp -r build ../server
   server_tests:
     needs: [client_build, server_setup]
     runs-on: ubuntu-latest
