--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles"
+    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles",
+    "build:ui": "rm -rf build && cd ../client && npm run build && cp -r build ../server"
   },
   "author": "",
   "license": "ISC",
