--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       - name: install dependencies
         run: cd server && npm install
       - name: build frontend
-        run: cd client && && npm run build && cp -r build ../server
+        run: cd client && npm run build && cp -r build ../server
   server_tests:
     needs: [client_build, server_setup]
     runs-on: ubuntu-latest
