--- a/server/package.json
+++ b/server/package.json
@@ -6,22 +6,26 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles",
-    "build:ui": "rm -rf build && cd ../client && npm run build && cp -r build ../server"
+    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "type": "module",
   "dependencies": {
-    "apollo-server": "^3.10.1",
+    "@apollo/server": "^4.3.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
     "nodemon": "^2.0.20"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "type": "module"
+  }
 }
