--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "uuid": "^9.0.0"
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
