--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --forceExit --detectOpenHandles"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --verbose --runInBand --testTimeout=10000 --forceExit --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -18,14 +18,17 @@
     "@apollo/server": "^4.3.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "mongodb-memory-server": "^8.11.3",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
